@@ -14,7 +14,7 @@ set_time_limit(0);
 define('PKG_NAME','Discuss');
 define('PKG_NAME_LOWER','discuss');
 define('PKG_VERSION','0.1');
-define('PKG_RELEASE','alpha2');
+define('PKG_RELEASE','alpha3');
 
 /* override with your own defines here (see build.config.sample.php) */
 require_once dirname(__FILE__) . '/build.config.php';
